Fix card caption wrapping

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -155,6 +155,7 @@ body {
     font-size: 1.5em;
     font-weight: 300;
     margin: 0 0 2px 0;
+    padding-right: 1em;
     text-align: left;
 }
 
